compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__constant_propagation_visitor__test__constant_propagation_snapshot_tests@assignment_properties_wait.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_propagation_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_propagation/assignment_properties_wait.tapir
---
# @toplevel: {"FunctionId(0)"}

var x = 3; # {"SymbolId(1)"}
int_prop = 3; # {"SymbolId(0)"}
wait;
var y = int_prop; # {"SymbolId(2)"}
