compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__constant_propagation_visitor__test__constant_propagation_snapshot_tests@call_statement_poison.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_propagation_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_propagation/call_statement_poison.tapir
---
int_prop = 4; # {"SymbolId(0)"}
var x = 4; # {"SymbolId(1)"}
foo(); # {"FunctionId(1)"}
var y = int_prop; # {"SymbolId(2)"}
var z = 4; # {"SymbolId(3)"}

fn foo() {
    wait;
}
