compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__constant_propagation_visitor__test__constant_propagation_snapshot_tests@simple_case_bool.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_propagation_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_propagation/simple_case_bool.tapir
---
# @toplevel: {"FunctionId(0)"}

var x = true; # {"SymbolId(1)"}
var y = true; # {"SymbolId(2)"}
